verify employee logic

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -8,7 +8,7 @@
   <body>
     <h1>
       Congratulations {{email}} You've registered! Please click on Below Link
-      for verify your email.
+      for verify your email <a href="{{link}}">Verify Email</a>.
     </h1>
   </body>
 </html>
